--- a/index.html
+++ b/index.html
@@ -22,27 +22,27 @@
   </thead>
   <tbody>
     <tr>
-      <td>&lt;table&gt;</td>
+      <td class="tags">&lt;table&gt;</td>
       <td>Table</td>
       <td>The wrapper element for all HTML tables.</td>
     </tr>
     <tr>
-      <td>&lt;thead&gt;</td>
+      <td class="tags">&lt;thead&gt;</td>
       <td>Table Head</td>
       <td>The set of rows defining the column headers in a table.</td>
     </tr>
     <tr>
-      <td>&lt;tbody&gt;</td>
+      <td class="tags">&lt;tbody&gt;</td>
       <td>Table Body</td>
       <td>The set of rows containing actual table data.</td>
     </tr>
     <tr>
-      <td>&lt;tr&gt;</td>
+      <td class="tags">&lt;tr&gt;</td>
       <td>Table Row</td>
       <td>The table row container.</td>
     </tr>
     <tr>
-      <td>&lt;td&gt;</td>
+      <td class="tags">&lt;td&gt;</td>
       <td>Table Data</td>
       <td>The table row container.</td>
     </tr>
@@ -59,12 +59,12 @@
   </thead>
   <tbody>
     <tr>
-      <td>&lt;colspan&gt;</td>
+      <td class="tags">&lt;colspan&gt;</td>
       <td>Column Span</td>
       <td>Defines how many columns a td element should span.</td>
     </tr>
     <tr>
-      <td>&lt;rowspan&gt;</td>
+      <td class="tags">&lt;rowspan&gt;</td>
       <td>Row Span</td>
       <td>Defines how many rows a td element should span.</td>
     </tr>
